@@ -1,3 +1,7 @@
+[B]Version 0.2.6[/B]
+### Some url's now still have watch- and some have text after the -YEAR, so I've dealt with that as well.
+- Due to changes in the site, I had to redo the parsing for Items.  Host parsing and playable link methods seem unchanged as far as I've tested.
+
 [B]Version 0.2.5[/B]
 - Searches and TV Series/Seasons/Episodes are currently dissabled still and need more work done on them.
 - Parsing for Video Hosters has been fixed.
